--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -108,9 +108,7 @@
 
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
                 <div>
-                    OMR4. Position/role <small class="block italic text-red-500">Fill in case manager if the person
-                        plays this role</small>
-                </div>
+                    OMR4. Position/role </div>
                 <div>
                     <input type="text" id="omr4" name="omr4"
                         class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
@@ -810,24 +808,24 @@
                     <div class="flex items-center">
                         <input id="cm7a-4" type="radio" value="3" name="cm7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7a-4" class="ms-2 text-sm text-gray-900">3. Specialized secondary/vocational
-                            education</label>
+                        <label for="cm7a-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized
+                            secondary/vocational education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7a-5" type="radio" value="4" name="cm7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7a-5" class="ms-2 text-sm text-gray-900">4. Unfinished specialized/ secondary
+                        <label for="cm7a-5" class="ms-2 text-sm text-gray-900">4. Specialized secondary/vocational
                             education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7a-6" type="radio" value="5" name="cm7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7a-6" class="ms-2 text-sm text-gray-900">5. Higher education</label>
+                        <label for="cm7a-6" class="ms-2 text-sm text-gray-900">5. Unfinished higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7a-7" type="radio" value="6" name="cm7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7a-7" class="ms-2 text-sm text-gray-900">6. Unfinished higher education</label>
+                        <label for="cm7a-7" class="ms-2 text-sm text-gray-900">6. Higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7a-9" type="radio" value="9" name="cm7a"
@@ -858,24 +856,24 @@
                     <div class="flex items-center">
                         <input id="cm7b-4" type="radio" value="3" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-4" class="ms-2 text-sm text-gray-900">3. Specialized secondary/vocational
-                            education</label>
+                        <label for="cm7b-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized
+                            secondary/vocational education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-5" type="radio" value="4" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-5" class="ms-2 text-sm text-gray-900">4. Unfinished specialized/ secondary
+                        <label for="cm7b-5" class="ms-2 text-sm text-gray-900">4. Specialized secondary/vocational
                             education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-6" type="radio" value="5" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-6" class="ms-2 text-sm text-gray-900">5. Higher education</label>
+                        <label for="cm7b-6" class="ms-2 text-sm text-gray-900">5. Unfinished higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-7" type="radio" value="6" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-7" class="ms-2 text-sm text-gray-900">6. Unfinished higher education</label>
+                        <label for="cm7b-7" class="ms-2 text-sm text-gray-900">6. Higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-9" type="radio" value="9" name="cm7b"
@@ -1222,7 +1220,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>CM10e. Settlement</div>
+                <div>e. Settlement</div>
                 <div>
                     <select id="cm10e" name="cm10e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -1236,7 +1234,7 @@
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
                 <div>
-                    CM11 Mother&#39;s current domicile. </div>
+                    CM11. Mother&#39;s current domicile. </div>
                 <div>
 
                     <div class="mb-2">a. Is she living…?</div>
@@ -1799,24 +1797,24 @@
                     <div class="flex items-center">
                         <input id="ct7a-4" type="radio" value="3" name="ct7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7a-4" class="ms-2 text-sm text-gray-900">3. Specialized secondary/vocational
+                        <label for="ct7a-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary
                             education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7a-5" type="radio" value="4" name="ct7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7a-5" class="ms-2 text-sm text-gray-900">4. Unfinished specialized secondary
+                        <label for="ct7a-5" class="ms-2 text-sm text-gray-900">4. Specialized secondary/vocational
                             education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7a-6" type="radio" value="5" name="ct7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7a-6" class="ms-2 text-sm text-gray-900">5. Higher education</label>
+                        <label for="ct7a-6" class="ms-2 text-sm text-gray-900">5. Unfinished higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7a-7" type="radio" value="6" name="ct7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7a-7" class="ms-2 text-sm text-gray-900">6. Unfinished higher education</label>
+                        <label for="ct7a-7" class="ms-2 text-sm text-gray-900">6. Higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7a-9" type="radio" value="9" name="ct7a"
@@ -1847,24 +1845,24 @@
                     <div class="flex items-center">
                         <input id="ct7b-4" type="radio" value="3" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Specialized secondary/vocational
+                        <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary
                             education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-5" type="radio" value="4" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-5" class="ms-2 text-sm text-gray-900">4. Unfinished specialized secondary
+                        <label for="ct7b-5" class="ms-2 text-sm text-gray-900">4. Specialized secondary/vocational
                             education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-6" type="radio" value="5" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-6" class="ms-2 text-sm text-gray-900">5. Higher education</label>
+                        <label for="ct7b-6" class="ms-2 text-sm text-gray-900">5. Unfinished higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-7" type="radio" value="6" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-7" class="ms-2 text-sm text-gray-900">6. Unfinished higher education</label>
+                        <label for="ct7b-7" class="ms-2 text-sm text-gray-900">6. Higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-9" type="radio" value="9" name="ct7b"
@@ -2359,7 +2357,6 @@
                         class="bg-white disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 </div>
             </div>
-            <small class="block italic text-red-500">If the person is a relative, code 1 in CG1a</small>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>CG1d. Kinship relation: </div>
@@ -2739,24 +2736,24 @@
                     <div class="flex items-center">
                         <input id="cg7a-4" type="radio" value="3" name="cg7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7a-4" class="ms-2 text-sm text-gray-900">3. Specialized secondary/vocational
-                            education</label>
+                        <label for="cg7a-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized
+                            secondary/vocational education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7a-5" type="radio" value="4" name="cg7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7a-5" class="ms-2 text-sm text-gray-900">4. Unfinished specialized
-                            secondary/vocational education </label>
+                        <label for="cg7a-5" class="ms-2 text-sm text-gray-900">4. Specialized secondary/vocational
+                            education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7a-6" type="radio" value="5" name="cg7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7a-6" class="ms-2 text-sm text-gray-900">5. Higher education</label>
+                        <label for="cg7a-6" class="ms-2 text-sm text-gray-900">5. Unfinished higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7a-7" type="radio" value="6" name="cg7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7a-7" class="ms-2 text-sm text-gray-900">6. Unfinished higher education</label>
+                        <label for="cg7a-7" class="ms-2 text-sm text-gray-900">6. Higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7a-9" type="radio" value="9" name="cg7a"
@@ -2787,24 +2784,24 @@
                     <div class="flex items-center">
                         <input id="cg7b-4" type="radio" value="3" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-4" class="ms-2 text-sm text-gray-900">3. Specialized secondary/vocational
-                            education</label>
+                        <label for="cg7b-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized
+                            secondary/vocational education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-5" type="radio" value="4" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-5" class="ms-2 text-sm text-gray-900">4. Unfinished specialized
-                            secondary/vocational education </label>
+                        <label for="cg7b-5" class="ms-2 text-sm text-gray-900">4. Specialized secondary/vocational
+                            education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-6" type="radio" value="5" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-6" class="ms-2 text-sm text-gray-900">5. Higher education</label>
+                        <label for="cg7b-6" class="ms-2 text-sm text-gray-900">5. Unfinished higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-7" type="radio" value="6" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-7" class="ms-2 text-sm text-gray-900">6. Unfinished higher education</label>
+                        <label for="cg7b-7" class="ms-2 text-sm text-gray-900">6. Higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-9" type="radio" value="9" name="cg7b"
@@ -5646,7 +5643,8 @@
                             </select>
                         </td>
                         <td class="p-1">
-                            <input type="hidden" id="sh3_csd" name="sh3_csd" />
+                            <input type="text" id="sh3_csd" name="sh3_csd"
+                                class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
                         </td>
                         <td class="p-1">
                         </td>
@@ -7553,12 +7551,9 @@
                 </div>
             </div>
 
-
-
             <div class="grid grid-cols-2 gap-4 mt-10">
-                <div>
-                    SK3. Does the child have brothers and/or sisters in the child protection system or boarding schools?
-                    If yes, how many brothers and how many sisters? </div>
+                <div> SK3. Does the child have brothers and/or sisters in the child care system? If yes, how many
+                    brothers and how many sisters? </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="sk3-1" type="radio" value="1" name="sk3"
@@ -7566,8 +7561,8 @@
                         <label for="sk3-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                     </div>
                     <div class="grid grid-cols-2 gap-4 items-center">
-                        <div class="text-sm text-gray-700 text-center">Brothers</div>
-                        <div class="text-sm text-gray-700 text-center">Sisters</div>
+                        <div class="text-sm text-gray-700 text-center">1. Yes, brothers</div>
+                        <div class="text-sm text-gray-700 text-center">2. Yes, sisters</div>
                     </div>
                     <div class="grid grid-cols-2 gap-4 items-center">
                         <div>
@@ -7587,7 +7582,7 @@
                     <div class="flex items-center">
                         <input id="sk3-4" type="radio" value="9" name="sk3"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="sk3-4" class="ms-2 text-sm text-gray-900">9. Unspecified/Unknown</label>
+                        <label for="sk3-4" class="ms-2 text-sm text-gray-900">9. Unspecified/Unknown </label>
                     </div>
                 </div>
             </div>
