--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -106,9 +106,7 @@
 
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
                 <div>
-                    ОМР4. Должность/функции <small class="block italic text-red-500">Укажите кейс менеджера, если данное
-                        лицо выполняет такую функцию</small>
-                </div>
+                    ОМР4. Должность/функции </div>
                 <div>
                     <input type="text" id="omr4" name="omr4"
                         class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
@@ -808,25 +806,25 @@
                     <div class="flex items-center">
                         <input id="cm7a-4" type="radio" value="3" name="cm7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7a-4" class="ms-2 text-sm text-gray-900">3. Среднее специальное/профессиональное
-                            образование</label>
+                        <label for="cm7a-4" class="ms-2 text-sm text-gray-900">3. Незаконченное среднее
+                            специальное/профессиональное образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7a-5" type="radio" value="4" name="cm7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7a-5" class="ms-2 text-sm text-gray-900">4. Незаконченное среднее
-                            специальное/профессиональное образование</label>
+                        <label for="cm7a-5" class="ms-2 text-sm text-gray-900">4. Среднее специальное/профессиональное
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7a-6" type="radio" value="5" name="cm7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7a-6" class="ms-2 text-sm text-gray-900">5. Высшее образование</label>
+                        <label for="cm7a-6" class="ms-2 text-sm text-gray-900">5. Незаконченное высшее
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7a-7" type="radio" value="6" name="cm7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7a-7" class="ms-2 text-sm text-gray-900">6. Незаконченное высшее
-                            образование</label>
+                        <label for="cm7a-7" class="ms-2 text-sm text-gray-900">6. Высшее образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7a-9" type="radio" value="9" name="cm7a"
@@ -858,25 +856,25 @@
                     <div class="flex items-center">
                         <input id="cm7b-4" type="radio" value="3" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-4" class="ms-2 text-sm text-gray-900">3. Среднее специальное/профессиональное
-                            образование</label>
+                        <label for="cm7b-4" class="ms-2 text-sm text-gray-900">3. Незаконченное среднее
+                            специальное/профессиональное образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-5" type="radio" value="4" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-5" class="ms-2 text-sm text-gray-900">4. Незаконченное среднее
-                            специальное/профессиональное образование</label>
+                        <label for="cm7b-5" class="ms-2 text-sm text-gray-900">4. Среднее специальное/профессиональное
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-6" type="radio" value="5" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-6" class="ms-2 text-sm text-gray-900">5. Высшее образование</label>
+                        <label for="cm7b-6" class="ms-2 text-sm text-gray-900">5. Незаконченное высшее
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-7" type="radio" value="6" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-7" class="ms-2 text-sm text-gray-900">6. Незаконченное высшее
-                            образование</label>
+                        <label for="cm7b-7" class="ms-2 text-sm text-gray-900">6. Высшее образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-9" type="radio" value="9" name="cm7b"
@@ -1226,7 +1224,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>CM10e. Пункт населения</div>
+                <div>e. Пункт населения</div>
                 <div>
                     <select id="cm10e" name="cm10e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -1240,7 +1238,7 @@
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
                 <div>
-                    СМ11 Текущее место жительство матери. </div>
+                    СМ11. Текущее место жительство матери. </div>
                 <div>
 
                     <div class="mb-2">а. Проживает ли она ...?</div>
@@ -1799,25 +1797,25 @@
                     <div class="flex items-center">
                         <input id="ct7a-4" type="radio" value="3" name="ct7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7a-4" class="ms-2 text-sm text-gray-900">3. Среднее специальное/профессиональное
-                            образование</label>
+                        <label for="ct7a-4" class="ms-2 text-sm text-gray-900">3. Незаконченное cреднее
+                            специальное/профессиональное образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7a-5" type="radio" value="4" name="ct7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7a-5" class="ms-2 text-sm text-gray-900">4. Незаконченное cреднее
-                            специальное/профессиональное образование</label>
+                        <label for="ct7a-5" class="ms-2 text-sm text-gray-900">4. Среднее специальное/профессиональное
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7a-6" type="radio" value="5" name="ct7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7a-6" class="ms-2 text-sm text-gray-900">5. Высшее образование</label>
+                        <label for="ct7a-6" class="ms-2 text-sm text-gray-900">5. Незаконченное высшее
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7a-7" type="radio" value="6" name="ct7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7a-7" class="ms-2 text-sm text-gray-900">6. Незаконченное высшее
-                            образование</label>
+                        <label for="ct7a-7" class="ms-2 text-sm text-gray-900">6. Высшее образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7a-9" type="radio" value="9" name="ct7a"
@@ -1849,25 +1847,25 @@
                     <div class="flex items-center">
                         <input id="ct7b-4" type="radio" value="3" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Среднее специальное/профессиональное
-                            образование</label>
+                        <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Незаконченное cреднее
+                            специальное/профессиональное образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-5" type="radio" value="4" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-5" class="ms-2 text-sm text-gray-900">4. Незаконченное cреднее
-                            специальное/профессиональное образование</label>
+                        <label for="ct7b-5" class="ms-2 text-sm text-gray-900">4. Среднее специальное/профессиональное
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-6" type="radio" value="5" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-6" class="ms-2 text-sm text-gray-900">5. Высшее образование</label>
+                        <label for="ct7b-6" class="ms-2 text-sm text-gray-900">5. Незаконченное высшее
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-7" type="radio" value="6" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-7" class="ms-2 text-sm text-gray-900">6. Незаконченное высшее
-                            образование</label>
+                        <label for="ct7b-7" class="ms-2 text-sm text-gray-900">6. Высшее образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-9" type="radio" value="9" name="ct7b"
@@ -2362,8 +2360,6 @@
                         class="bg-white disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 </div>
             </div>
-            <small class="block italic text-red-500">Если человек является родственником, используйте код 1 в
-                CG1a</small>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>CG1d. Родственные связи: </div>
@@ -2744,25 +2740,25 @@
                     <div class="flex items-center">
                         <input id="cg7a-4" type="radio" value="3" name="cg7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7a-4" class="ms-2 text-sm text-gray-900">3. Среднее специальное/профессиональное
-                            образование</label>
+                        <label for="cg7a-4" class="ms-2 text-sm text-gray-900">3. Незаконченное специальное /
+                            профессиональное образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7a-5" type="radio" value="4" name="cg7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7a-5" class="ms-2 text-sm text-gray-900">4.Незаконченное специальное /
-                            профессиональное образование</label>
+                        <label for="cg7a-5" class="ms-2 text-sm text-gray-900">4. Среднее специальное/профессиональное
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7a-6" type="radio" value="5" name="cg7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7a-6" class="ms-2 text-sm text-gray-900">5. Высшее образование</label>
+                        <label for="cg7a-6" class="ms-2 text-sm text-gray-900">5. Незаконченное высшее
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7a-7" type="radio" value="6" name="cg7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7a-7" class="ms-2 text-sm text-gray-900">6. Незаконченное высшее
-                            образование</label>
+                        <label for="cg7a-7" class="ms-2 text-sm text-gray-900">6. Высшее образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7a-9" type="radio" value="9" name="cg7a"
@@ -2794,25 +2790,25 @@
                     <div class="flex items-center">
                         <input id="cg7b-4" type="radio" value="3" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-4" class="ms-2 text-sm text-gray-900">3. Среднее специальное/профессиональное
-                            образование</label>
+                        <label for="cg7b-4" class="ms-2 text-sm text-gray-900">3. Незаконченное специальное /
+                            профессиональное образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-5" type="radio" value="4" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-5" class="ms-2 text-sm text-gray-900">4.Незаконченное специальное /
-                            профессиональное образование</label>
+                        <label for="cg7b-5" class="ms-2 text-sm text-gray-900">4. Среднее специальное/профессиональное
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-6" type="radio" value="5" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-6" class="ms-2 text-sm text-gray-900">5. Высшее образование</label>
+                        <label for="cg7b-6" class="ms-2 text-sm text-gray-900">5. Незаконченное высшее
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-7" type="radio" value="6" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-7" class="ms-2 text-sm text-gray-900">6. Незаконченное высшее
-                            образование</label>
+                        <label for="cg7b-7" class="ms-2 text-sm text-gray-900">6. Высшее образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-9" type="radio" value="9" name="cg7b"
@@ -7569,9 +7565,8 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 mt-10">
-                <div>
-                    SK3. Есть ли у ребенка братья и/или сестры, в системе защиты ребенка или в школе-интернате? Если да,
-                    то сколько братьев и сестер? </div>
+                <div> SK3. Есть ли у ребенка братья и/или сестры, находящиеся в системе опеки? Если да, то сколько
+                    братьев и сестер? </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="sk3-1" type="radio" value="1" name="sk3"
@@ -7579,8 +7574,8 @@
                         <label for="sk3-1" class="ms-2 text-sm text-gray-900">1. Да</label>
                     </div>
                     <div class="grid grid-cols-2 gap-4 items-center">
-                        <div class="text-sm text-gray-700 text-center">Братья </div>
-                        <div class="text-sm text-gray-700 text-center">Сестры</div>
+                        <div class="text-sm text-gray-700 text-center">Братья</div>
+                        <div class="text-sm text-gray-700 text-center">Cестры</div>
                     </div>
                     <div class="grid grid-cols-2 gap-4 items-center">
                         <div>
