--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -111,9 +111,7 @@
 
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
                 <div>
-                    OMR4. Lavozimi/vazifalari <small class="block italic text-red-500">Keys - menejerni ko&#39;rsatib
-                        o&#39;ting, agar u bu vazifani bajarayotgan bo&#39;lsa</small>
-                </div>
+                    OMR4. Lavozimi/vazifalari </div>
                 <div>
                     <input type="text" id="omr4" name="omr4"
                         class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
@@ -828,24 +826,24 @@
                     <div class="flex items-center">
                         <input id="cm7a-4" type="radio" value="3" name="cm7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7a-4" class="ms-2 text-sm text-gray-900">3. O&#39;rta maxsus/kasb-hunar
-                            ta&#39;limi</label>
+                        <label for="cm7a-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan O&#39;rta
+                            maxsus/kasb-hunar ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7a-5" type="radio" value="4" name="cm7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7a-5" class="ms-2 text-sm text-gray-900">4. Tugallanmagan O&#39;rta
-                            maxsus/kasb-hunar ta&#39;limi</label>
+                        <label for="cm7a-5" class="ms-2 text-sm text-gray-900">4. O&#39;rta maxsus/kasb-hunar
+                            ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7a-6" type="radio" value="5" name="cm7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7a-6" class="ms-2 text-sm text-gray-900">5. Oliy ta&#39;lim</label>
+                        <label for="cm7a-6" class="ms-2 text-sm text-gray-900">5. Tugallanmagan oliy ta&#39;lim</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7a-7" type="radio" value="6" name="cm7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7a-7" class="ms-2 text-sm text-gray-900">6. Tugallanmagan oliy ta&#39;lim</label>
+                        <label for="cm7a-7" class="ms-2 text-sm text-gray-900">6. Oliy ta&#39;lim</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7a-9" type="radio" value="9" name="cm7a"
@@ -877,24 +875,24 @@
                     <div class="flex items-center">
                         <input id="cm7b-4" type="radio" value="3" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-4" class="ms-2 text-sm text-gray-900">3. O&#39;rta maxsus/kasb-hunar
-                            ta&#39;limi</label>
+                        <label for="cm7b-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan O&#39;rta
+                            maxsus/kasb-hunar ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-5" type="radio" value="4" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-5" class="ms-2 text-sm text-gray-900">4. Tugallanmagan O&#39;rta
-                            maxsus/kasb-hunar ta&#39;limi</label>
+                        <label for="cm7b-5" class="ms-2 text-sm text-gray-900">4. O&#39;rta maxsus/kasb-hunar
+                            ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-6" type="radio" value="5" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-6" class="ms-2 text-sm text-gray-900">5. Oliy ta&#39;lim</label>
+                        <label for="cm7b-6" class="ms-2 text-sm text-gray-900">5. Tugallanmagan oliy ta&#39;lim</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-7" type="radio" value="6" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-7" class="ms-2 text-sm text-gray-900">6. Tugallanmagan oliy ta&#39;lim</label>
+                        <label for="cm7b-7" class="ms-2 text-sm text-gray-900">6. Oliy ta&#39;lim</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-9" type="radio" value="9" name="cm7b"
@@ -1248,7 +1246,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>CM10e. Aholi punkti</div>
+                <div>e. Aholi punkti</div>
                 <div>
                     <select id="cm10e" name="cm10e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -1262,7 +1260,7 @@
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
                 <div>
-                    CM11 Onaning xozirgi kundagi yashash manzili. </div>
+                    CM11. Onaning xozirgi kundagi yashash manzili. </div>
                 <div>
 
                     <div class="mb-2">a. U qayerda istiqomat qilib keladi...?</div>
@@ -1838,24 +1836,24 @@
                     <div class="flex items-center">
                         <input id="ct7a-4" type="radio" value="3" name="ct7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7a-4" class="ms-2 text-sm text-gray-900">3. O&#39;rta maxsus/kasb-hunar
-                            ta&#39;limi</label>
+                        <label for="ct7a-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan o&#39;rta
+                            maxsus/kasb-hunar ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7a-5" type="radio" value="4" name="ct7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7a-5" class="ms-2 text-sm text-gray-900">4. Tugallanmagan o&#39;rta
-                            maxsus/kasb-hunar ta&#39;limi</label>
+                        <label for="ct7a-5" class="ms-2 text-sm text-gray-900">4. O&#39;rta maxsus/kasb-hunar
+                            ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7a-6" type="radio" value="5" name="ct7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7a-6" class="ms-2 text-sm text-gray-900">5. Oliy ta&#39;lim</label>
+                        <label for="ct7a-6" class="ms-2 text-sm text-gray-900">5. Tugallanmagan oliy ta&#39;lim</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7a-7" type="radio" value="6" name="ct7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7a-7" class="ms-2 text-sm text-gray-900">6. Tugallanmagan oliy ta&#39;lim</label>
+                        <label for="ct7a-7" class="ms-2 text-sm text-gray-900">6. Oliy ta&#39;lim</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7a-9" type="radio" value="9" name="ct7a"
@@ -1887,24 +1885,24 @@
                     <div class="flex items-center">
                         <input id="ct7b-4" type="radio" value="3" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. O&#39;rta maxsus/kasb-hunar
-                            ta&#39;limi</label>
+                        <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan o&#39;rta
+                            maxsus/kasb-hunar ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-5" type="radio" value="4" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-5" class="ms-2 text-sm text-gray-900">4. Tugallanmagan o&#39;rta
-                            maxsus/kasb-hunar ta&#39;limi</label>
+                        <label for="ct7b-5" class="ms-2 text-sm text-gray-900">4. O&#39;rta maxsus/kasb-hunar
+                            ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-6" type="radio" value="5" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-6" class="ms-2 text-sm text-gray-900">5. Oliy ta&#39;lim</label>
+                        <label for="ct7b-6" class="ms-2 text-sm text-gray-900">5. Tugallanmagan oliy ta&#39;lim</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-7" type="radio" value="6" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-7" class="ms-2 text-sm text-gray-900">6. Tugallanmagan oliy ta&#39;lim</label>
+                        <label for="ct7b-7" class="ms-2 text-sm text-gray-900">6. Oliy ta&#39;lim</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-9" type="radio" value="9" name="ct7b"
@@ -2403,7 +2401,6 @@
                         class="bg-white disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 </div>
             </div>
-            <small class="block italic text-red-500">Agar shaxs qarindosh bo&#39;lsa, kod 1 CG1a ga kiritilsin</small>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>CG1d. Qarindoshlik aloqalari: </div>
@@ -2791,24 +2788,24 @@
                     <div class="flex items-center">
                         <input id="cg7a-4" type="radio" value="3" name="cg7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7a-4" class="ms-2 text-sm text-gray-900">3. O&#39;rta maxsus/kasb-hunar
-                            ta&#39;limi</label>
+                        <label for="cg7a-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan o&#39;rta
+                            maxsus/kasb-hunar ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7a-5" type="radio" value="4" name="cg7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7a-5" class="ms-2 text-sm text-gray-900">4. Tugallanmagan o&#39;rta
-                            maxsus/kasb-hunar ta&#39;limi</label>
+                        <label for="cg7a-5" class="ms-2 text-sm text-gray-900">4. O&#39;rta maxsus/kasb-hunar
+                            ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7a-6" type="radio" value="5" name="cg7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7a-6" class="ms-2 text-sm text-gray-900">5. Oliy ta&#39;lim</label>
+                        <label for="cg7a-6" class="ms-2 text-sm text-gray-900">5. Tugallanmagan oliy ta&#39;lim</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7a-7" type="radio" value="6" name="cg7a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7a-7" class="ms-2 text-sm text-gray-900">6. Tugallanmagan oliy ta&#39;lim</label>
+                        <label for="cg7a-7" class="ms-2 text-sm text-gray-900">6. Oliy ta&#39;lim</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7a-9" type="radio" value="9" name="cg7a"
@@ -2840,24 +2837,24 @@
                     <div class="flex items-center">
                         <input id="cg7b-4" type="radio" value="3" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-4" class="ms-2 text-sm text-gray-900">3. O&#39;rta maxsus/kasb-hunar
-                            ta&#39;limi</label>
+                        <label for="cg7b-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan o&#39;rta
+                            maxsus/kasb-hunar ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-5" type="radio" value="4" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-5" class="ms-2 text-sm text-gray-900">4. Tugallanmagan o&#39;rta
-                            maxsus/kasb-hunar ta&#39;limi</label>
+                        <label for="cg7b-5" class="ms-2 text-sm text-gray-900">4. O&#39;rta maxsus/kasb-hunar
+                            ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-6" type="radio" value="5" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-6" class="ms-2 text-sm text-gray-900">5. Oliy ta&#39;lim</label>
+                        <label for="cg7b-6" class="ms-2 text-sm text-gray-900">5. Tugallanmagan oliy ta&#39;lim</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-7" type="radio" value="6" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-7" class="ms-2 text-sm text-gray-900">6. Tugallanmagan oliy ta&#39;lim</label>
+                        <label for="cg7b-7" class="ms-2 text-sm text-gray-900">6. Oliy ta&#39;lim</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-9" type="radio" value="9" name="cg7b"
@@ -7675,9 +7672,8 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 mt-10">
-                <div>
-                    SK3. Bolaning bolalarni himoya qilish tizimida yoki maktab-internatlarda aka-uka va/yoki
-                    opa-singillari bormi? Ha bo&#39;lsa, nechta aka-uka va nechta opa-singil? </div>
+                <div> SK3. Bolaning vasiylik h tizimida aka-uka va/yoki opa-singillari mavjudmi? Ha bo&#39;lsa, nechta
+                    aka-uka va nechta opa-singil? </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="sk3-1" type="radio" value="1" name="sk3"
@@ -7685,8 +7681,8 @@
                         <label for="sk3-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
                     </div>
                     <div class="grid grid-cols-2 gap-4 items-center">
-                        <div class="text-sm text-gray-700 text-center">Aka-ukalar</div>
-                        <div class="text-sm text-gray-700 text-center">Opa-singillar</div>
+                        <div class="text-sm text-gray-700 text-center">Aka-ukalari</div>
+                        <div class="text-sm text-gray-700 text-center">Opa-singillari</div>
                     </div>
                     <div class="grid grid-cols-2 gap-4 items-center">
                         <div>
@@ -7701,12 +7697,12 @@
                     <div class="flex items-center">
                         <input id="sk3-3" type="radio" value="3" name="sk3"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="sk3-3" class="ms-2 text-sm text-gray-900">3. Na aka-uka, na opa-singillar</label>
+                        <label for="sk3-3" class="ms-2 text-sm text-gray-900">3. Na aka-uka, na opa-singillari</label>
                     </div>
                     <div class="flex items-center">
                         <input id="sk3-4" type="radio" value="9" name="sk3"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="sk3-4" class="ms-2 text-sm text-gray-900">9. Ko&#39;rsatilmagan/Noma&#39;lum</label>
+                        <label for="sk3-4" class="ms-2 text-sm text-gray-900">9. Aniqlanmagan/Noma&#39;lum</label>
                     </div>
                 </div>
             </div>
