fix str3c la 5A

--- a/src/pages/instruments/05a_tqyp_ru.html
+++ b/src/pages/instruments/05a_tqyp_ru.html
@@ -77,6 +77,15 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>c. Населённый пункт</div>
+                <div>
+                    <select id="str3c" name="str3c"
+                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                        <option value="-9" class="t_choose">--- choose ---</option>
+                    </select>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>STR4. Тип учреждения</div>
                 <div>
                     <div>
