--- a/src/pages/instruments/03_csr_uz.html
+++ b/src/pages/instruments/03_csr_uz.html
@@ -152,21 +152,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>I4d. Aholi punkti turi</div>
-                <div>
-                    <select id="i4d" name="i4d"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                        <option value="10" class="t_settlement_type_10"></option>
-                        <option value="20" class="t_settlement_type_20"></option>
-                        <option value="21" class="t_settlement_type_21"></option>
-                        <option value="22" class="t_settlement_type_22"></option>
-                        <option value="23" class="t_settlement_type_23"></option>
-                        <option value="24" class="t_settlement_type_24"></option>
-                        <option value="31" class="t_settlement_type_31"></option>
-                    </select>
-                </div>
-            </div>
+            <input type="hidden" id="i4d" name="i4d" />
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>I5. Muassasa turi</div>
                 <div>
