--- a/src/pages/instruments/02_cibs_ru.html
+++ b/src/pages/instruments/02_cibs_ru.html
@@ -3548,8 +3548,18 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div class="flex flex-col gap-4">
                     7. Другое: у ребенка были проблемы с любой другой областью, не указанной выше. Просьба уточнить: …
-                    <input type="text" id="predif7_other" name="predif7_other"
-                        class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <table border="0">
+                        <tr>
+                            <td>
+                                <input id="predif7_cb" type="checkbox" value="1" name="predif7_cb"
+                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            </td>
+                            <td>
+                                <input type="text" id="predif7_other" name="predif7_other"
+                                    class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                            </td>
+                        </tr>
+                    </table>
                 </div>
                 <div class="flex flex-col gap-2">
                     <div class="flex items-center">
@@ -5555,8 +5565,18 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div class="ml-4 flex flex-col gap-4">
                     7. Другое: у ребенка были проблемы с любой другой областью, не указанной выше. Просьба уточнить: …
-                    <input type="text" id="todif7_other" name="todif7_other"
-                        class="mb-4 bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <table border="0">
+                        <tr>
+                            <td>
+                                <input id="todif7_cb" type="checkbox" value="1" name="todif7_cb"
+                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            </td>
+                            <td>
+                                <input type="text" id="todif7_other" name="todif7_other"
+                                    class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                            </td>
+                        </tr>
+                    </table>
                 </div>
                 <div>
                     <div class="col-span-1 flex items-center gap-4">
