--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -259,7 +259,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>LK14d. Пункт населения</div>
+                <div>LK14d. Населённый пункт</div>
                 <div>
                     <select id="lk14d" name="lk14d"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -533,7 +533,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>CM3d. Пункт населения</div>
+                <div>CM3d. Населённый пункт</div>
                 <div>
                     <select id="cm3d" name="cm3d"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -1224,7 +1224,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>e. Пункт населения</div>
+                <div>e. Населённый пункт</div>
                 <div>
                     <select id="cm10e" name="cm10e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -1288,7 +1288,7 @@
             </div>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>e. Пункт населения</div>
+                <div>e. Населённый пункт</div>
                 <div>
                     <select id="cm11e" name="cm11e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -1526,7 +1526,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>CT3d. Пункт населения</div>
+                <div>CT3d. Населённый пункт</div>
                 <div>
                     <select id="ct3d" name="ct3d"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -2209,7 +2209,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>e. Пункт населения</div>
+                <div>e. Населённый пункт</div>
                 <div>
                     <select id="ct10e" name="ct10e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -2273,7 +2273,7 @@
             </div>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>e. Пункт населения</div>
+                <div>e. Населённый пункт</div>
                 <div>
                     <select id="ct11e" name="ct11e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -3151,7 +3151,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>e. Пункт населения</div>
+                <div>e. Населённый пункт</div>
                 <div>
                     <select id="cg10e" name="cg10e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -3209,7 +3209,7 @@
             </div>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>e. Пункт населения</div>
+                <div>e. Населённый пункт</div>
                 <div>
                     <select id="cg11e" name="cg11e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -3327,7 +3327,7 @@
             </div>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>SA3c. Пункт населения</div>
+                <div>SA3c. Населённый пункт</div>
                 <div>
                     <select id="sa3c" name="sa3c"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -5648,8 +5648,6 @@
                             </select>
                         </td>
                         <td class="p-1">
-                            <input type="text" id="sh3_csd" name="sh3_csd"
-                                class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
                         </td>
                         <td class="p-1">
                         </td>
